packages/@slidejs/dsl/src/generated/parser.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() {
    this.constructor = child;
  }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = 'SyntaxError';
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || ' ';
  if (str.length > targetLength) {
    return str;
  }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function (sources) {
  var str = 'Error: ' + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s =
      this.location.source && typeof this.location.source.offset === 'function'
        ? this.location.source.offset(s)
        : s;
    var loc = this.location.source + ':' + offset_s.line + ':' + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd('', offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = last - s.column || 1;
      str +=
        '\n --> ' +
        loc +
        '\n' +
        filler +
        ' |\n' +
        offset_s.line +
        ' | ' +
        line +
        '\n' +
        filler +
        ' | ' +
        peg$padEnd('', s.column - 1, ' ') +
        peg$padEnd('', hatLen, '^');
    } else {
      str += '\n at ' + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function (expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function (expectation) {
      return '"' + literalEscape(expectation.text) + '"';
    },

    class: function (expectation) {
      var escapedParts = expectation.parts.map(function (part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + '-' + classEscape(part[1])
          : classEscape(part);
      });

      return '[' + (expectation.inverted ? '^' : '') + escapedParts.join('') + ']';
    },

    any: function () {
      return 'any character';
    },

    end: function () {
      return 'end of input';
    },

    other: function (expectation) {
      return expectation.description;
    },
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g, '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function (ch) {
        return '\\x0' + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return '\\x' + hex(ch);
      });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g, '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function (ch) {
        return '\\x0' + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return '\\x' + hex(ch);
      });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + ' or ' + descriptions[1];

      default:
        return (
          descriptions.slice(0, -1).join(', ') + ', or ' + descriptions[descriptions.length - 1]
        );
    }
  }

  function describeFound(found) {
    return found ? '"' + literalEscape(found) + '"' : 'end of input';
  }

  return 'Expected ' + describeExpected(expected) + ' but ' + describeFound(found) + ' found.';
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = 'present';
  var peg$c1 = '{';
  var peg$c2 = '}';
  var peg$c3 = 'quiz';
  var peg$c4 = 'survey';
  var peg$c5 = 'form';
  var peg$c6 = 'assessment';
  var peg$c7 = 'rules';
  var peg$c8 = 'rule';
  var peg$c9 = 'start';
  var peg$c10 = 'content';
  var peg$c11 = 'end';
  var peg$c12 = 'for';
  var peg$c13 = 'in';
  var peg$c14 = 'slide';
  var peg$c15 = 'dynamic';
  var peg$c16 = 'text';
  var peg$c17 = 'name';
  var peg$c18 = ':';
  var peg$c19 = 'attrs';
  var peg$c20 = 'behavior';
  var peg$c21 = 'transition';
  var peg$c22 = '+';
  var peg$c23 = '.';
  var peg$c24 = '"';
  var peg$c25 = "'";
  var peg$c26 = '\\';
  var peg$c27 = 'n';
  var peg$c28 = 'r';
  var peg$c29 = 't';
  var peg$c30 = 'true';
  var peg$c31 = 'false';
  var peg$c32 = '//';
  var peg$c33 = '/*';
  var peg$c34 = '*/';

  var peg$r0 = /^[a-zA-Z_]/;
  var peg$r1 = /^[a-zA-Z0-9_]/;
  var peg$r2 = /^["'\\]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[\t-\r \u2028-\u2029]/;
  var peg$r5 = /^[ \t\v\f]/;
  var peg$r6 = /^[\n\r\u2028\u2029]/;

  var peg$e0 = peg$literalExpectation('present', false);
  var peg$e1 = peg$literalExpectation('{', false);
  var peg$e2 = peg$literalExpectation('}', false);
  var peg$e3 = peg$literalExpectation('quiz', false);
  var peg$e4 = peg$literalExpectation('survey', false);
  var peg$e5 = peg$literalExpectation('form', false);
  var peg$e6 = peg$literalExpectation('assessment', false);
  var peg$e7 = peg$literalExpectation('rules', false);
  var peg$e8 = peg$literalExpectation('rule', false);
  var peg$e9 = peg$literalExpectation('start', false);
  var peg$e10 = peg$literalExpectation('content', false);
  var peg$e11 = peg$literalExpectation('end', false);
  var peg$e12 = peg$literalExpectation('for', false);
  var peg$e13 = peg$literalExpectation('in', false);
  var peg$e14 = peg$literalExpectation('slide', false);
  var peg$e15 = peg$literalExpectation('dynamic', false);
  var peg$e16 = peg$literalExpectation('text', false);
  var peg$e17 = peg$literalExpectation('name', false);
  var peg$e18 = peg$literalExpectation(':', false);
  var peg$e19 = peg$literalExpectation('attrs', false);
  var peg$e20 = peg$classExpectation([['a', 'z'], ['A', 'Z'], '_'], false, false);
  var peg$e21 = peg$classExpectation([['a', 'z'], ['A', 'Z'], ['0', '9'], '_'], false, false);
  var peg$e22 = peg$literalExpectation('behavior', false);
  var peg$e23 = peg$literalExpectation('transition', false);
  var peg$e24 = peg$literalExpectation('+', false);
  var peg$e25 = peg$literalExpectation('.', false);
  var peg$e26 = peg$literalExpectation('"', false);
  var peg$e27 = peg$literalExpectation("'", false);
  var peg$e28 = peg$literalExpectation('\\', false);
  var peg$e29 = peg$anyExpectation();
  var peg$e30 = peg$classExpectation(['"', "'", '\\'], false, false);
  var peg$e31 = peg$literalExpectation('n', false);
  var peg$e32 = peg$literalExpectation('r', false);
  var peg$e33 = peg$literalExpectation('t', false);
  var peg$e34 = peg$classExpectation([['0', '9']], false, false);
  var peg$e35 = peg$literalExpectation('true', false);
  var peg$e36 = peg$literalExpectation('false', false);
  var peg$e37 = peg$otherExpectation('whitespace');
  var peg$e38 = peg$classExpectation([['\t', '\r'], ' ', ['\u2028', '\u2029']], false, false);
  var peg$e39 = peg$classExpectation([' ', '\t', '\v', '\f'], false, false);
  var peg$e40 = peg$classExpectation(['\n', '\r', '\u2028', '\u2029'], false, false);
  var peg$e41 = peg$literalExpectation('//', false);
  var peg$e42 = peg$literalExpectation('/*', false);
  var peg$e43 = peg$literalExpectation('*/', false);

  var peg$f0 = function (presentation) {
    return presentation;
  };
  var peg$f1 = function (type, name, body) {
    return {
      version: '1.0.0',
      sourceType: type,
      sourceId: name,
      ...body,
    };
  };
  var peg$f2 = function (rules) {
    return { rules };
  };
  var peg$f3 = function (rules) {
    return rules;
  };
  var peg$f4 = function (name, slides) {
    return buildNode('rule', {
      ruleType: 'start',
      name,
      slides,
    });
  };
  var peg$f5 = function (name, body) {
    return buildNode('rule', {
      ruleType: 'content',
      name,
      body,
    });
  };
  var peg$f6 = function (name, slides) {
    return buildNode('rule', {
      ruleType: 'end',
      name,
      slides,
    });
  };
  var peg$f7 = function (variable, collection, body) {
    return buildNode('for', {
      variable,
      collection,
      body,
    });
  };
  var peg$f8 = function (variable, collection, body) {
    return buildNode('for', {
      variable,
      collection,
      body,
    });
  };
  var peg$f9 = function (slides) {
    return slides;
  };
  var peg$f10 = function (content, behavior) {
    return buildNode('slide', {
      content,
      behavior: behavior || undefined,
    });
  };
  var peg$f11 = function (name, attrs) {
    return buildNode('dynamic', {
      component: name,
      props: attrs,
    });
  };
  var peg$f12 = function (lines) {
    return buildNode('text', {
      lines,
    });
  };
  var peg$f13 = function (name) {
    return name;
  };
  var peg$f14 = function (attrs) {
    return buildAttrs(attrs);
  };
  var peg$f15 = function (attrs) {
    return attrs;
  };
  var peg$f16 = function (key, value) {
    return [key, value];
  };
  var peg$f17 = function (first, rest) {
    return first + rest.join('');
  };
  var peg$f18 = function (lines) {
    return lines;
  };
  var peg$f19 = function (expr) {
    return expr;
  };
  var peg$f20 = function (transition) {
    return buildNode('behavior', {
      transition,
    });
  };
  var peg$f21 = function (transType, options) {
    return buildNode('transition', {
      transType,
      options: options || {},
    });
  };
  var peg$f22 = function (first, rest) {
    return first + rest.join('');
  };
  var peg$f23 = function (opts) {
    return buildOptions(opts);
  };
  var peg$f24 = function (key, value) {
    return [key, value];
  };
  var peg$f25 = function (left, right) {
    return buildNode('binary', {
      operator: '+',
      left,
      right,
    });
  };
  var peg$f26 = function (head, tail) {
    return buildNode('member', {
      object: head,
      properties: tail.map(t => t[1]),
    });
  };
  var peg$f27 = function (id) {
    return buildNode('member', {
      object: id,
      properties: [],
    });
  };
  var peg$f28 = function (first, rest) {
    return first + rest.join('');
  };
  var peg$f29 = function (first, rest) {
    return first + rest.join('');
  };
  var peg$f30 = function (chars) {
    return chars.join('');
  };
  var peg$f31 = function (chars) {
    return chars.join('');
  };
  var peg$f32 = function (char) {
    return char;
  };
  var peg$f33 = function (sequence) {
    return sequence;
  };
  var peg$f34 = function (char) {
    return char;
  };
  var peg$f35 = function (sequence) {
    return sequence;
  };
  var peg$f36 = function () {
    return '\n';
  };
  var peg$f37 = function () {
    return '\r';
  };
  var peg$f38 = function () {
    return '\t';
  };
  var peg$f39 = function (digits) {
    return buildNode('number', {
      value: parseInt(digits.join(''), 10),
    });
  };
  var peg$f40 = function () {
    return buildNode('boolean', {
      value: true,
    });
  };
  var peg$f41 = function () {
    return buildNode('boolean', {
      value: false,
    });
  };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error('Can\'t start parsing from rule "' + options.startRule + '".');
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: 'literal', text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: 'class', parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: 'any' };
  }

  function peg$endExpectation() {
    return { type: 'end' };
  }

  function peg$otherExpectation(description) {
    return { type: 'other', description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && typeof peg$source.offset === 'function') {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parsePresentation();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePresentation() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e0);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseSourceType();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseStringLiteral();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 123) {
            s7 = peg$c1;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e1);
            }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parsePresentationBody();
            if (s9 !== peg$FAILED) {
              s10 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 125) {
                s11 = peg$c2;
                peg$currPos++;
              } else {
                s11 = peg$FAILED;
                if (peg$silentFails === 0) {
                  peg$fail(peg$e2);
                }
              }
              if (s11 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f1(s3, s5, s9);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSourceType() {
    var s0;

    if (input.substr(peg$currPos, 4) === peg$c3) {
      s0 = peg$c3;
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e3);
      }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 6) === peg$c4) {
        s0 = peg$c4;
        peg$currPos += 6;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e4);
        }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c5) {
          s0 = peg$c5;
          peg$currPos += 4;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e5);
          }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 10) === peg$c6) {
            s0 = peg$c6;
            peg$currPos += 10;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e6);
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsePresentationBody() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c7) {
      s1 = peg$c7;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e7);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 123) {
        s3 = peg$c1;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e1);
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseRuleList();
        s6 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s7 = peg$c2;
          peg$currPos++;
        } else {
          s7 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e2);
          }
        }
        if (s7 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseRuleList() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseRule();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseRule();
    }
    peg$savedPos = s0;
    s1 = peg$f3(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseRule() {
    var s0;

    s0 = peg$parseStartRule();
    if (s0 === peg$FAILED) {
      s0 = peg$parseContentRule();
      if (s0 === peg$FAILED) {
        s0 = peg$parseEndRule();
      }
    }

    return s0;
  }

  function peg$parseStartRule() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c8) {
      s1 = peg$c8;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e8);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.substr(peg$currPos, 5) === peg$c9) {
        s3 = peg$c9;
        peg$currPos += 5;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e9);
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseStringLiteral();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 123) {
            s7 = peg$c1;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e1);
            }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parseSlideList();
            s10 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 125) {
              s11 = peg$c2;
              peg$currPos++;
            } else {
              s11 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$e2);
              }
            }
            if (s11 !== peg$FAILED) {
              s12 = peg$parse_();
              peg$savedPos = s0;
              s0 = peg$f4(s5, s9);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseContentRule() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c8) {
      s1 = peg$c8;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e8);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.substr(peg$currPos, 7) === peg$c10) {
        s3 = peg$c10;
        peg$currPos += 7;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e10);
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseStringLiteral();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 123) {
            s7 = peg$c1;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e1);
            }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parseContentBody();
            if (s9 !== peg$FAILED) {
              s10 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 125) {
                s11 = peg$c2;
                peg$currPos++;
              } else {
                s11 = peg$FAILED;
                if (peg$silentFails === 0) {
                  peg$fail(peg$e2);
                }
              }
              if (s11 !== peg$FAILED) {
                s12 = peg$parse_();
                peg$savedPos = s0;
                s0 = peg$f5(s5, s9);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEndRule() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;
